--- a/app/src/main/res/layout/inc_movie_detail.xml
+++ b/app/src/main/res/layout/inc_movie_detail.xml
@@ -5,6 +5,7 @@
     android:id="@+id/movie_detail_nested_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:transitionGroup="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
@@ -39,7 +40,6 @@
                 android:layout_toEndOf="@+id/movie_detail_title_text_view"
                 android:layout_toRightOf="@+id/movie_detail_title_text_view"
                 tools:text="2015"></TextView>
-
 
         </RelativeLayout>
 
@@ -99,9 +99,7 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/detail_movie_trailers_card_view"
-            style="@style/MovieDetailContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            style="@style/MovieDetailContainer">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -116,24 +114,83 @@
 
                 <include layout="@layout/divider" />
 
-                <!-- TODO Mladen remove them in the project stage 2 -->
-                <include layout="@layout/list_item_trailer" />
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:padding="6dp"
+                    android:layout_height="wrap_content">
 
-                <include layout="@layout/list_item_trailer" />
+                    <LinearLayout
+                        android:id="@+id/movie_detail_trailer_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp">
 
-                <include layout="@layout/list_item_trailer" />
+                        <ProgressBar
+                            style="?android:attr/progressBarStyleSmall"
+                            android:id="@+id/movie_detail_trailer_progress_bar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:visibility="gone" />
 
-                <include layout="@layout/list_item_trailer" />
+                        <TextView
+                            android:id="@+id/empty_trailer_list"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/no_trailers"
+                            android:paddingLeft="@dimen/text_padding_8dp"
+                            android:visibility="gone"/>
 
-                <!--<android.support.v7.widget.RecyclerView-->
-                <!--android:id="@+id/detailTrailers"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
+                    </LinearLayout>
+                </HorizontalScrollView>
 
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/detail_movie_reviews_card_view"
+            style="@style/MovieDetailContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/detail_movie_reviews_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/MovieDetailContainerTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reviews" />
+
+                <include layout="@layout/divider" />
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleSmall"
+                    android:id="@+id/movie_detail_review_progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding_16dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/empty_review_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_reviews"
+                    android:paddingLeft="@dimen/text_padding_8dp"
+                    android:paddingTop="@dimen/text_padding_16dp"
+                    android:paddingBottom="@dimen/text_padding_16dp"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
