--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/show_favorites"
+        android:title="@string/show_favorites" />
+    <item
         android:id="@+id/sort_by_popularity_desc"
         android:title="@string/sort_by_popularity_desc" />
     <item
