--- a/app/src/main/res/layout/fragment_main_wide.xml
+++ b/app/src/main/res/layout/fragment_main_wide.xml
@@ -17,7 +17,11 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <include layout="@layout/inc_no_connection"/>
+    <include layout="@layout/inc_no_connection" />
+
+    <include
+        android:id="@+id/inc_no_movies"
+        layout="@layout/inc_no_movies"  />
 
 </FrameLayout>
 
