--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,10 @@
     <include layout="@layout/toolbar"/>
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/fragment_main"
         class="com.mladenbabic.popularmovies.fragment.MainFragment"
-        tools:layout="@layout/fragment_main">
-    </fragment>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_main" />
 
 </android.support.design.widget.CoordinatorLayout>
