--- a/app/src/main/res/layout/inc_toolbar_movie_detail.xml
+++ b/app/src/main/res/layout/inc_toolbar_movie_detail.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:clickable="true"
         app:contentScrim="?attr/colorPrimary"
         app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -20,9 +21,7 @@
             android:id="@+id/movie_detail_backdrop_image_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
-            tools:src="@drawable/ic_movie_placeholder"
             app:layout_collapseMode="parallax" />
 
         <ImageView
